--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -1,3 +1,3 @@
 <div class="col-lg-12">
-  <h2 class="text-center">Welcome</h2>
+  <button ui-sref="reviews" class="btn bnt-default btn-lg">Welcome</button>
 </div>
