--- a/partials/header.html
+++ b/partials/header.html
@@ -1,4 +1,4 @@
 <div ng-controller="HeaderCtrl">
   <h3 ui-sref="welcome">Nick's Flix</h3>
-  <h5><a ui-sref="home" ng-hide="currentPath === '/' || currentPath === '' " hometext></a></h5>
+  <h4 class="page-header">Let's Talk About Movies</h4>
 </div>
