--- a/partials/reviews.html
+++ b/partials/reviews.html
@@ -1,17 +1,19 @@
 <div ng-show="reviews.length">
-  <div class="row">
-    <ul ng-repeat="review in reviews">
+  <div class="row" ng-repeat="review in reviews">
+    <ul>
       <div class="col-md-4">
         <h4><a ui-sref="{{ review.title }}">{{ review.title }}</a></h4>
       </div>
       <div class="col-md-8">
-        {{review.content}}
+        {{ review.content }}
       </div>
     </ul>
+  </div>
 </div>
 
-
-
+<div class="row">
+  <div class="col-md-4"></div>
+  <center>
   <div class="col-md-8">
     <strong><h3>Create New Movie Review</h3></strong>
     <br>
@@ -29,6 +31,8 @@
       <button type="submit" class="btn btn-default btn-lg">Submit</button>
     </form>
   </div>
-</center>
+  </center>
+
+</div>
 
 <div ui-view="body"> </div>
