--- a/partials/header.html
+++ b/partials/header.html
@@ -1,4 +1,5 @@
-<div ng-controller="HeaderCtrl">
-  <h3 ui-sref="welcome">Nick's Flix</h3>
-  <h4 class="page-header">Let's Talk About Movies</h4>
+<div class="header" ng-controller="HeaderCtrl">
+  <h2 ui-sref="welcome">Nick's Flix</h2>
+  <h4>Let's Talk About Movies</h4>
 </div>
+<hr>
