--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -1,3 +1,10 @@
-<div class="col-lg-12">
-  <center><button ui-sref="reviews" class="btn bnt-default btn-lg">Welcome</button></center>
+<div class="front">
+  <div class="col-md-5"></div>
+  <div class="col-lg-2">
+    <center>
+      <h1>Welcome!</h1>
+      <button ui-sref="reviews" class="btn btn-info btn-lg btn-block">Enter</button>
+    </center>
+  </div>
+  <div class="col-md-5"></div>
 </div>
