--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <div class="header" ng-controller="HeaderCtrl">
-  <h2 ui-sref="welcome">Nick's Flix</h2>
-  <h4>Let's Talk About Movies</h4>
+  <h2 ui-sref="welcome">Chick's Flix</h2>
+  <h4>fogetaboutit!!</h4>
 </div>
 <hr>
