--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -2,9 +2,9 @@
   <div class="col-md-5"></div>
   <div class="col-lg-2">
     <center>
-      <h1>Welcome!</h1>
-      <button ui-sref="reviews" class="btn btn-info btn-lg btn-block">Enter</button>
+      <h1>Not Welcome!</h1>
+      <button ui-sref="reviews" class="btn btn-info btn-lg btn-block">keep Out</button>
     </center>
-  </div>
+  </div>  
   <div class="col-md-5"></div>
 </div>
