--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -1,10 +1,10 @@
 <div class="front">
-  <div class="col-md-5"></div>
-  <div class="col-lg-2">
+  <div class="col-md-4"></div>
+  <div class="col-lg-4">
     <center>
-      <h1>Not Welcome!</h1>
-      <button ui-sref="reviews" class="btn btn-info btn-lg btn-block">keep Out</button>
+      <h1>Restricted Area</h1>
+      <button ui-sref="reviews" class="btn btn-info btn-lg btn-block">Keep Out</button>
     </center>
-  </div>  
-  <div class="col-md-5"></div>
+  </div>
+  <div class="col-md-4"></div>
 </div>
